# wine

./: meson.build
dlls/: meson.build
dlls/advapi32/: cred.c  crypt.c  lsa.c  meson.build  registry.c  security.c  service.c
dlls/advpack/: advpack.c  files.c  install.c  reg.c
dlls/amstream/: amstream.c  audiodata.c  main.c  mediastream.c  mediastreamfilter.c
dlls/appwiz.cpl/: appwiz.c
dlls/atl/: atl.c  atl30.c  atl_ax.c  registrar.c
dlls/avifil32/: acmstream.c  api.c  avifile.c  editstream.c  extrachunk.c  factory.c  getframe.c  icmstream.c  tmpfile.c  wavfile.c
dlls/avrt/: main.c
dlls/browseui/: progressdlg.c
dlls/cabinet/: cabinet_main.c
dlls/combase/: string.c
dlls/comdlg32/: cdlg32.c  colordlg.c  filedlg.c  filedlg31.c  finddlg.c  fontdlg.c  itemdlg.c  printdlg.c
dlls/commdlg.dll16/: filedlg.c
dlls/compobj.dll16/: compobj.c
dlls/credui/: credui_main.c
dlls/crypt32/: cert.c  chain.c  main.c  msg.c
dlls/cryptdlg/: main.c
dlls/cryptui/: main.c
dlls/d3d10/: meson.build
dlls/d3d11/: meson.build
dlls/d3dcompiler_43/: blob.c  compiler.c  d3dcompiler_private.h  meson.build  reflection.c  utils.c
dlls/d3dcompiler_46/: meson.build
dlls/d3dcompiler_47/: meson.build
dlls/d3dx10_43/: async.c
dlls/d3dx11_43/: async.c  meson.build
dlls/d3dx9_36/: animation.c  core.c  effect.c  font.c  line.c  math.c  mesh.c  preshader.c  render.c  shader.c  skin.c  sprite.c  surface.c  texture.c  volume.c  xfile.c
dlls/d3dxof/: d3dxof.c  main.c  mszip.c  parsing.c
dlls/dbghelp/: coff.c  dbghelp.c  dwarf.c  elf_module.c  macho_module.c  minidump.c  module.c  msc.c  pe_module.c  source.c  stabs.c  storage.c  symbol.c  type.c
dlls/dinput/: config.c  device.c  dinput_main.c  effect_linuxinput.c  joystick.c  joystick_linux.c  joystick_linuxinput.c  joystick_osx.c  keyboard.c  mouse.c
dlls/dispex/: usrmarshal.c
dlls/dmband/: band.c  bandtrack.c
dlls/dmcompos/: chordmap.c  chordmaptrack.c  composer.c  signposttrack.c
dlls/dmime/: audiopath.c  graph.c  lyricstrack.c  markertrack.c  paramcontroltrack.c  performance.c  segment.c  segmentstate.c  segtriggertrack.c  seqtrack.c  sysextrack.c  tempotrack.c  timesigtrack.c  wavetrack.c
dlls/dmloader/: container.c  loader.c  loaderstream.c
dlls/dmscript/: script.c  scripttrack.c
dlls/dmstyle/: auditiontrack.c  chordtrack.c  commandtrack.c  motiftrack.c  mutetrack.c  style.c  styletrack.c
dlls/dmsynth/: synth.c  synthsink.c
dlls/dmusic/: buffer.c  clock.c  collection.c  dmusic.c  download.c  instrument.c  port.c
dlls/dplayx/: dplay.c  dplaysp.c  dplayx_messages.c  dplobby.c  lobbysp.c  name_server.c
dlls/dpnet/: address.c  client.c  lobbiedapp.c  peer.c  server.c  threadpool.c
dlls/dpvoice/: client.c  server.c
dlls/dsound/: buffer.c  capture.c  dsound.c  dsound_private.h  duplex.c  mixer.c  primary.c  propset.c
dlls/dsquery/: main.c
dlls/dswave/: dswave.c
dlls/dx8vb/: main.c
dlls/dxdiagn/: container.c  provider.c
dlls/dxgi/: meson.build
dlls/dxguid/: meson.build
dlls/evr/: main.c
dlls/fake/: meson.build
dlls/faultrep/: faultrep.c
dlls/gameux/: gameexplorer.c  gamestatistics.c  gameux_private.h
dlls/gdi.exe16/: gdi.c  printdrv.c
dlls/gdi32/: bidi.c  bitblt.c  bitmap.c  brush.c  dc.c  dib.c  driver.c  enhmetafile.c  font.c  freetype.c  gdi_private.h  gdiobj.c  icm.c  meson.build  metafile.c  painting.c  palette.c  path.c  pen.c  printdrv.c  region.c
dlls/gdiplus/: gdiplus.c
dlls/glu32/: mesh.c  mipmap.c  priorityq.c  quad.c  sweep.c  tess.c
dlls/gphoto2.ds/: capability.c  ds_image.c  gphoto2_main.c
dlls/hid/: hidd.c
dlls/hidclass.sys/: buffer.c  descriptor.c  device.c  main.c  pnp.c
dlls/hnetcfg/: apps.c  manager.c  policy.c  port.c  profile.c  service.c
dlls/ieframe/: iexplore.c  intshcut.c
dlls/imaadp32.acm/: imaadp32.c
dlls/imagehlp/: access.c  integrity.c
dlls/imm32/: imm.c  meson.build
dlls/inetcomm/: imaptransport.c  internettransport.c  mimeintl.c  mimeole.c  pop3transport.c  smtptransport.c
dlls/inetmib1/: main.c
dlls/infosoft/: wordbreaker.c
dlls/iphlpapi/: icmp.c  ifenum.c  iphlpapi_main.c  ipstats.c  meson.build
dlls/itss/: chm_lib.c  itss.c  lzx.c  moniker.c  protocol.c  storage.c
dlls/joy.cpl/: main.c
dlls/kernel32/: actctx.c  atom.c  comm.c  computername.c  console.c  cpu.c  debugger.c  editline.c  environ.c  except.c  fiber.c  file.c  format_msg.c  heap.c  kernel_main.c  kernel_private.h  lcformat.c  locale.c  lzexpand.c  meson.build  module.c  path.c  process.c  profile.c  resource.c  sync.c  term.c  thread.c  time.c  toolhelp.c  version.c  virtual.c  volume.c  xxx.c
dlls/krnl386.exe16/: file.c  global.c  int21.c  int67.c  ioports.c  kernel.c  local.c  ne_module.c  ne_segment.c  relay.c  resource.c  selector.c  snoop.c  task.c  thunk.c  utthunk.c  vxd.c
dlls/l3codeca.acm/: mpegl3.c
dlls/loadperf/: loadperf_main.c
dlls/localspl/: provider.c
dlls/localui/: localui.c
dlls/mapi32/: prop.c  sendmail.c  util.c
dlls/mciavi32/: mciavi.c  mmoutput.c
dlls/mcicda/: mcicda.c
dlls/mciqtz32/: mciqtz.c
dlls/mciseq/: mcimidi.c
dlls/mciwave/: mciwave.c
dlls/mf/: session.c  topology.c
dlls/mfplat/: main.c
dlls/mfreadwrite/: main.c
dlls/midimap/: midimap.c
dlls/mlang/: mlang.c
dlls/mmdevapi/: audiovolume.c  devenum.c
dlls/mmsystem.dll16/: driver.c  mci16.c  message16.c  mmsystem.c
dlls/mountmgr.sys/: device.c  mountmgr.c
dlls/mpr/: meson.build  mpr_main.c  pwcache.c  wnet.c
dlls/msacm32/: format.c  pcmconverter.c
dlls/msacm32.drv/: wavemap.c
dlls/msadp32.acm/: msadp32.c
dlls/mscms/: handle.c  profile.c  transform.c
dlls/mscoree/: assembly.c  config.c  cordebug.c  corruntimehost.c  metadata.c  metahost.c  mscoree_main.c
dlls/msctf/: categorymgr.c  compartmentmgr.c  context.c  displayattributemgr.c  documentmgr.c  inputprocessor.c  langbarmgr.c  msctf.c  range.c  threadmgr.c
dlls/msdaps/: row_server.c
include/: config.h.meson.in  guiddef.h  knownfolders.h  meson.build  ole2.h  rpcdce.h  rpcproxy.h  usp10.h  winbase.h  wincon.h  wingdi.h  winnls.h  winnt.h  winreg.h  winternl.h  winuser.h
(+818 files in other folders)
