idl_files = [
    #'access.idl',
    'activaut.idl',
    'activdbg.idl',
    'activscp.idl',
    'amstream.idl',
    'amvideo.idl',
    'asptlb.idl',
    #'asynot.idl',
    #'asysta.idl',
    'atliface.idl',
    'audioclient.idl',
    'audiopolicy.idl',
    'austream.idl',
    #'axcore.idl',
    #'axextend.idl',
    'bdaiface.idl',
    #'binres.idl',
    'bits1_5.idl',
    'bits2_0.idl',
    'bits2_5.idl',
    'bits3_0.idl',
    'bits.idl',
    #'chprst.idl',
    #'cmdbas.idl',
    #'cmdtxt.idl',
    'cmnquery.idl',
    #'colinf.idl',
    'comcat.idl',
    'commoncontrols.idl',
    'comsvcs.idl',
    'control.idl',
    'cordebug.idl',
    'cor.idl',
    #'crtrow.idl',
    'ctfutb.idl',
    'ctxtcall.idl',
    'd2d1_1.idl',
    'd2d1.idl',
    'd3d10_1.idl',
    'd3d10.idl',
    'd3d10sdklayers.idl',
    'd3d11_1.idl',
    'd3d11_2.idl',
    'd3d11_3.idl',
    'd3d11_4.idl',
    'd3d11.idl',
    'd3d11sdklayers.idl',
    'd3d12.idl',
    'd3dcommon.idl',
    'd3dx10core.idl',
    'd3dx11core.idl',
    #'dbccmd.idl',
    #'dbcses.idl',
    #'dbdsad.idl',
    #'dbinit.idl',
    #'dbprop.idl',
    #'dbs.idl',
    'dcommon.idl',
    'ddstream.idl',
    'devenum.idl',
    'devicetopology.idl',
    'dhtmled.idl',
    'dimm.idl',
    'dispex.idl',
    'docobjectservice.idl',
    'docobj.idl',
    'downloadmgr.idl',
    'drmexternals.idl',
    'dwrite_1.idl',
    'dwrite_2.idl',
    'dwrite_3.idl',
    'dwrite.idl',
    'dxgi1_2.idl',
    'dxgi1_3.idl',
    'dxgi1_4.idl',
    'dxgi1_5.idl',
    'dxgi1_6.idl',
    'dxgicommon.idl',
    'dxgiformat.idl',
    'dxgi.idl',
    'dxgitype.idl',
    'dxva2api.idl',
    #'dyngraph.idl',
    'endpointvolume.idl',
    #'errrec.idl',
    'evr.idl',
    'exdisp.idl',
    'fusion.idl',
    'gameux.idl',
    'hlink.idl',
    'hstring.idl',
    'htiface.idl',
    'htiframe.idl',
    'httprequest.idl',
    'iads.idl',
    'icftypes.idl',
    'ieautomation.idl',
    'iextag.idl',
    'iimgctx.idl',
    'imnact.idl',
    'imnxport.idl',
    'indexsrv.idl',
    'inputscope.idl',
    'inseng.idl',
    'inspectable.idl',
    'mediaobj.idl',
    'metahost.idl',
    'mfidl.idl',
    'mfobjects.idl',
    'mfreadwrite.idl',
    'mftransform.idl',
    'mimeinfo.idl',
    'mimeole.idl',
    'mlang.idl',
    'mmc.idl',
    'mmdeviceapi.idl',
    'mmstream.idl',
    'mscoree.idl',
    'msctf.idl',
    'msdadc.idl',
    'msdasc.idl',
    'mshtmhst.idl',
    'mshtml.idl',
    'msident.idl',
    'msinkaut.idl',
    'mstask.idl',
    'msxml2.idl',
    'msxml6.idl',
    'msxml.idl',
    'netcfgx.idl',
    'netcon.idl',
    'netfw.idl',
    'netlistmgr.idl',
    'oaidl.idl',
    'objectarray.idl',
    'objidl.idl',
    'objsafe.idl',
    'ocidl.idl',
    'ocmm.idl',
    'oleacc.idl',
    'oledb.idl',
    'oleidl.idl',
    #'opnrst.idl',
    'optary.idl',
    'perhist.idl',
    'propidl.idl',
    'propsys.idl',
    'pstore.idl',
    'qedit.idl',
    'richole.idl',
    'roparameterizediid.idl',
    #'rowchg.idl',
    #'row.idl',
    #'rowpos.idl',
    #'rowpsc.idl',
    #'rstbas.idl',
    #'rstinf.idl',
    #'rstloc.idl',
    #'rstnot.idl',
    'sapiddk.idl',
    'sapi.idl',
    'sensevts.idl',
    'servprov.idl',
    #'sesprp.idl',
    'shdeprecated.idl',
    'shimgdata.idl',
    'shldisp.idl',
    'shobjidl.idl',
    'shtypes.idl',
    #'srcrst.idl',
    'stdole2.idl',
    'strmif.idl',
    'structuredquerycondition.idl',
    'taskschd.idl',
    'textstor.idl',
    'tlogstg.idl',
    'tom.idl',
    'transact.idl',
    'txcoord.idl',
    'txdtc.idl',
    'uianimation.idl',
    'uiautomationclient.idl',
    'uiautomationcore.idl',
    'uiribbon.idl',
    'unknwn.idl',
    'urlhist.idl',
    'urlmon.idl',
    'vmr9.idl',
    #'vmrender.idl',
    'vss.idl',
    'wbemcli.idl',
    'wbemdisp.idl',
    'wbemprov.idl',
    'wia_lh.idl',
    'wia_xp.idl',
    'wincodec.idl',
    'wincodecsdk.idl',
    'windows.foundation.idl',
    'winsxs.idl',
    'wmdrmsdk.idl',
    'wmiutils.idl',
    'wmp.idl',
    'wmsbuffer.idl',
    'wmsdkidl.idl',
    'wpcapi.idl',
    'wsdbase.idl',
    'wsddisco.idl',
    'wsdxml.idl',
    'wtypes.idl',
    'wuapi.idl',
    'xapo.idl',
    'xaudio2fx.idl',
    'xaudio2.idl',
    #'xmldom.idl',
    #'xmldso.idl',
    'xmllite.idl',
]

include_files = []
install_include_files = []
foreach idl_file : idl_files
    include_files += custom_target(idl_file,
        input: idl_file,
        output: '@BASENAME@.h',
        command: ['tools/widl/widl', '-m64', '-I.', '-Iinclude', '-I../include', '-o', '@OUTPUT@', '@INPUT@'],
        depends: [
            tools_widl_exe,
        ],
        build_by_default: true,
        install: true,
        install_dir: join_paths(get_option('includedir'), 'winapi'),
    )
endforeach

subdir('wine')

include_dep = declare_dependency(
    sources: [
        include_files,
        include_wine_files,
    ],
    dependencies: [
        base_include_dep,
    ],
)

install_headers([
        'basetsd.h',
        'bcrypt.h',
        'cderr.h',
        'cguid.h',
        'd3dcompiler.h',
        'd3d10_1shader.h',
        'd3d10effect.h',
        'd3d10misc.h',
        'd3d10shader.h',
        'd3d11shader.h',
        'dde.h',
        'dde.rh',
        'ddeml.h',
        'dlgs.h',
        'excpt.h',
        'guiddef.h',
        'imm.h',
        'inaddr.h',
        'libloaderapi.h',
        'lzexpand.h',
        'mcx.h',
        'mmsystem.h',
        'nb30.h',
        'objbase.h',
        'ole2.h',
        'oleauto.h',
        'poppack.h',
        'pshpack1.h',
        'pshpack2.h',
        'pshpack4.h',
        'pshpack8.h',
        'reason.h',
        'rpc.h',
        'rpcasync.h',
        'rpcdce.h',
        'rpcdcep.h',
        'rpcndr.h',
        'rpcnterr.h',
        'rpcsal.h',
        'shellapi.h',
        'verrsrc.h',
        'winbase.h',
        'wincon.h',
        'wincrypt.h',
        'windef.h',
        'windows.h',
        'windowsx.h',
        'winerror.h',
        'wingdi.h',
        'winioctl.h',
        'winnetwk.h',
        'winnls.h',
        'winnt.h',
        'winnt.rh',
        'winperf.h',
        'winreg.h',
        'winscard.h',
        'winsock.h',
        'winsvc.h',
        'winuser.h',
        'winuser.rh',
        'winver.h',
    ],
    subdir: 'winapi',
)
