dlls_gdi32_lib = shared_library('winapi-gdi32', [
        'bidi.c',
        'bitblt.c',
        'bitmap.c',
        'brush.c',
        'clipping.c',
        'dc.c',
        'dib.c',
        'dibdrv/bitblt.c',
        'dibdrv/dc.c',
        'dibdrv/graphics.c',
        'dibdrv/objects.c',
        'dibdrv/opengl.c',
        'dibdrv/primitives.c',
        'driver.c',
        'enhmetafile.c',
        'enhmfdrv/bitblt.c',
        'enhmfdrv/dc.c',
        'enhmfdrv/graphics.c',
        'enhmfdrv/init.c',
        'enhmfdrv/objects.c',
        'font.c',
        'freetype.c',
        'gdiobj.c',
        'icm.c',
        'mapping.c',
        'metafile.c',
        'mfdrv/bitblt.c',
        'mfdrv/dc.c',
        'mfdrv/graphics.c',
        'mfdrv/init.c',
        'mfdrv/objects.c',
        'mfdrv/text.c',
        'opengl.c',
        'painting.c',
        'palette.c',
        'path.c',
        'pen.c',
        'printdrv.c',
        'region.c',
        'vertical.c',
    ],
    c_args: [
        '-D_GDI32_',
    ],
    link_args: [
        '-Wl,--defsym=GetCharWidthA=GetCharWidth32A',
        '-Wl,--defsym=GetCharWidthW=GetCharWidth32W',
        '-Wl,--warn-unresolved-symbols',
    ],
    dependencies: [
        include_dep,
        libs_wine_dep,
        dlls_winecrt0_dep,
        dlls_ntdll_dep,
        dlls_kernel32_dep,
        dlls_advapi32_dep,
        m_dep,
    ],
    build_rpath: '$ORIGIN/../usp10',
    install: true,
)

run_target('patchelf_gdi32',
    command: [
        patchelf_program,
        '--add-needed', 'libwinapi-usp10.so',
        dlls_gdi32_lib.full_path(),
    ],
)

dlls_gdi32_dep = declare_dependency(
    link_with: dlls_gdi32_lib,
)
