dlls_kernel32_lib = shared_library('winapi-kernel32', [
        'actctx.c',
        'atom.c',
        #'change.c',
        #'comm.c',
        'computername.c',
        'console.c',
        'cpu.c',
        'debugger.c',
        'editline.c',
        'environ.c',
        'except.c',
        #'fiber.c',
        'file.c',
        'format_msg.c',
        'heap.c',
        'kernel_main.c',
        'lcformat.c',
        'locale.c',
        #'lzexpand.c',
        'module.c',
        'nameprep.c',
        #'oldconfig.c',
        'path.c',
        #'powermgnt.c',
        'process.c',
        'profile.c',
        'resource.c',
        'string.c',
        'sync.c',
        #'tape.c',
        'term.c',
        'thread.c',
        'time.c',
        #'toolhelp.c',
        'version.c',
        'virtual.c',
        'volume.c',
        'wer.c',
        #'xxx.c',
    ],
    c_args: [
        '-D_KERNEL32_',
        '-D_NORMALIZE_',
    ],
    link_args: [
        #'-Wl,--defsym=InitializeSListHead=RtlInitializeSListHead',
    ],
    dependencies: [
        include_dep,
        libs_wine_dep,
        dlls_winecrt0_dep,
        dlls_ntdll_dep,
        dl_dep,
        gio_dep,
        threads_dep,
    ],
    install: true,
)

dlls_kernel32_dep = declare_dependency(
    link_with: dlls_kernel32_lib,
)
