dlls_ntdll_lib = shared_library('winapi-ntdll', [
        #'actctx.c',
        #'atom.c',
        'cdrom.c',
        'critsection.c',
        #'debugbuffer.c',
        #'debugtools.c',
        'directory.c',
        'env.c',
        'error.c',
        'exception.c',
        'file.c',
        'handletable.c',
        #'heap.c',
        #'large_int.c',
        'loader.c',
        #'loadorder.c',
        'misc.c',
        'nt.c',
        'om.c',
        'path.c',
        'printf.c',
        'process.c',
        #'reg.c',
        #'relay.c',
        'resource.c',
        'rtl.c',
        'rtlbitmap.c',
        'rtlstr.c',
        'sec.c',
        'serial.c',
        #'server.c',
        'signal_arm.c',
        'signal_arm64.c',
        'signal_i386.c',
        'signal_powerpc.c',
        'signal_x86_64.c',
        #'string.c',
        'sync.c',
        'tape.c',
        'thread.c',
        'threadpool.c',
        'time.c',
        'version.c',
        'virtual.c',
        'wcstring.c',
    ],
    c_args: [
        '-D_NTSYSTEM_',
    ],
    dependencies: [
        include_dep,
        libs_wine_dep,
        dlls_winecrt0_dep,
        threads_dep,
        m_dep,
    ],
    install: true,
)

dlls_ntdll_dep = declare_dependency(
    link_with: dlls_ntdll_lib,
)
